# armv8

./: CMakeLists.txt  test.s  utilities.c
doc/: Checkpoint.tex  Report.tex
extension/: CMakeLists.txt  README.md
extension/iq_fit/: board.c  definitions.h  iq_fit.c  piece.c  piece.h  utilities.c  utilities.h
programs/: led_blink.s
src/: .cbuild  .emulate.c.swo  .gitignore  .nfs00000000a624e0090000006b  .nfs00000000a624e00900000078  .nfs00000000a6435c3f00000064  .nfs00000000a6435c3f00000066  .nfs00000000a6435c3f00000068  .nfs00000000a644103100000157  .nfs00000000a644103c0000004a  .nfs00000000a664002600000132  .nfs00000000a6670c0400000072  .nfs00000001a09330340000042e  .nfs00000001a426ac3d0000042f  .nfs00000001a5a4283b0000091f  .nfs000000028166204f00000125  .nfs000000028183c6fd00000110  .nfs00000002819d6801000000f5  .nfs00000002819d680200000049  .nfs00000002819d683800000121  .nfs0000000281a0503900000921  .nfs0000000281bbf4210000002b  .nfs0000000281e2201100000117  .nfs000000028696501b00000102  B.c  B.h  DPImm.c  DPImm.h  DPReg.c  DPReg.h  LED_blink.s  Makefile  SDT.c  SDT.h  assemble.c  assemble.h  blink.s  definition.h  definitions.h  emulate.c  (+13 more)
src/assembler_files/: B.c  B.h  CMakeLists.txt  DP.c  DP.h  SDT.c  SDT.h  definition.h  definitions.h  ioutils.c  ioutils.h  utilities.c  utilities.h
src/emulate_files/: B.c  B.h  CMakeLists.txt  DPImm.c  DPImm.h  DPReg.c  DPReg.h  SDT.c  SDT.h  definitions.h  ioutils.c  ioutils.h  utilities.c  utilities.h
src/iq_fit/: Makefile  board.c  board.h  iq_fit.c  iq_fit.h  piece.c  piece.h  utilities.c  utilities.h
